# vinyl-gl

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  default.nix  hackagedocs.sh  stack.yaml  vinyl-gl.cabal
examples/: README.md  vinyl-gl-examples.cabal
examples/VisualCompare/: comparison.tex
examples/blog/: Game2D.lhs  Makefile  StyleTweak.css
examples/etc/: game2d.frag  game2d.vert  ground.frag  ground.vert  hello-gl.frag  hello-gl.vert  logo.frag  logo.vert  poly.frag  poly.vert
examples/src/: Demo3D.hs  Game2D.hs  Game2D.lhs  Geometry.hs  Keyboard2D.hs  Keyboard3D.hs  KeyboardInterface.hs  Window.hs  example1-vinyl.hs
src/Data/Vinyl/: Reflect.hs
src/Graphics/: VinylGL.hs
src/Graphics/VinylGL/: Uniforms.hs  Vertex.hs  Viewport.hs
tests/: BasicTest.hs
