name:          vinyl-gl
version:       0.3.4
synopsis:      Utilities for working with OpenGL's GLSL shading language and vinyl records.
description:   Using "Data.Vinyl" records (similar in spirit to @HList@)
               to carry GLSL uniform parameters and vertex data enables
               library code to reflect over the types of the data to
               facilitate interaction between Haskell and GLSL. See the
               @examples@ directory in the repository for more
               information.
license:       BSD3
license-file:  LICENSE
author:        Anthony Cowley
maintainer:    acowley@gmail.com
copyright:     Copyright (C) 2013 Anthony Cowley
category:      Graphics
build-type:    Simple
cabal-version: >=1.10
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: http://github.com/acowley/vinyl-gl.git

library
  exposed-modules:     Data.Vinyl.Reflect,
                       Graphics.VinylGL,
                       Graphics.VinylGL.Uniforms,
                       Graphics.VinylGL.Vertex
  -- other-modules:
  build-depends:       base >= 4.6 && < 5, transformers >= 0.3,
                       vinyl >= 0.9.3,
                       containers >= 0.5, GLUtil >= 0.6.4, OpenGL >= 2.8,
                       tagged >= 0.4, vector >= 0.10, linear >= 1.1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: BasicTest.hs
  ghc-options: -Wall -O2
  default-language: Haskell2010
  build-depends: base >= 4.6 && < 5,
                 test-framework, test-framework-hunit, HUnit,
                 linear, vinyl, vinyl-gl, OpenGL, tagged
