name:                vinyl-gl-examples
version:             0.1.0.0
synopsis:            Example programs using vinyl-gl.

description:         The most convenient way to run these demonstrations is to
                     open the @examples@ directory and @cabal build@ the
                     package. The demos may then be run by issuing
                     @dist/build/game2d/game2d@ or @dist/build/demo3d/demo3d@.

license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2013 Anthony Cowley
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
data-files:          etc/*, art/*

executable game2d
  main-is:             Game2D.hs
  other-modules:       Window, Keyboard2D
  build-depends:       base >= 4.6, vinyl >= 0.1, GLFW-b >= 0.1, 
                       linear >= 1.1, GLUtil >= 0.6, OpenGL >= 2.8, 
                       filepath ==1.3.*, vinyl-gl >= 0.1, containers >= 0.5,
                       time >= 1.4, directory >= 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010

executable demo3d
  main-is:             Demo3D.hs
  other-modules:       Window, KeyboardInterface, Geometry
  build-depends:       base >= 4.6, vinyl >= 0.1, GLFW-b >= 0.1, 
                       linear >= 1.1, GLUtil >= 0.6, OpenGL >= 2.8, 
                       filepath ==1.3.*, vinyl-gl >= 0.1, containers >= 0.5,
                       time >= 1.4, directory >= 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010