name:                vinyl-gl-examples
version:             0.3.0
synopsis:            Example programs using vinyl-gl.

description:         The most convenient way to run these demonstrations is to
                     open the @examples@ directory and @cabal build@ the
                     package. The demos may then be run by issuing
                     @dist/build/game2d/game2d@ or @dist/build/demo3d/demo3d@.

license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2013 Anthony Cowley
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
data-files:          etc/*.frag, etc/*.vert, art/*.png

executable game2d
  main-is:             Game2D.hs
  other-modules:       Window, Keyboard2D
  build-depends:       base >= 4.6, vinyl >= 0.8, GLFW-b >= 3.2 && < 3.3,
                       linear >= 1.1, GLUtil >= 0.7, OpenGL >= 2.9.2,
                       filepath >= 1.3 && < 1.5, vinyl-gl >= 0.2, containers >= 0.5,
                       time >= 1.4, directory >= 1.2, lens >= 3.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -dynamic

executable demo3d
  main-is:             Demo3D.hs
  other-modules:       Window, Keyboard3D, Geometry
  build-depends:       base >= 4.6, vinyl >= 0.8, GLFW-b >= 3.2 && < 3.3,
                       linear >= 1.1, GLUtil >= 0.7, OpenGL >= 2.9.2,
                       filepath >= 1.3 && < 1.6, vinyl-gl >= 0.2, containers >= 0.5,
                       time >= 1.4, directory >= 1.2, lens >= 3.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -dynamic
